--- a/ADN.html
+++ b/ADN.html
@@ -175,8 +175,8 @@
         <div class="container">
             <div class="text-center mx-auto mb-5 wow fadeInUp" data-wow-delay="0.1s" style="max-width: 600px;">
                 <h4 class="section-title bg-white text-center text-primary px-3">Nos prestations</h4>
-                <h6 class="display-6 mb-4">s’articulent autour de trois axes</h6>
-                <h3 class="display-6 mb-4">Axe1: Consulting</h3>
+                <p class="display-6 mb-4" style="font-size : 30px">s’articulent autour de trois axes</p>
+                <h6 class="display-6 mb-4" style="font-size : 35px">Axe1: Consulting</h6>
             </div>
             <div class="owl-carousel testimonial-carousel wow fadeInUp" data-wow-delay="0.1s">
                 <div class="testimonial-item bg-light rounded p-4">
@@ -203,7 +203,7 @@
     <div class="container-xxl py-5">
         <div class="container">
             <div class="text-center mx-auto mb-5 wow fadeInUp" data-wow-delay="0.1s" style="max-width: 600px;">
-                <h3 class="display-6 mb-4">Axe2: Etudes // Développement</h3>
+                <h6 class="display-6 mb-4" style="font-size : 35px">Axe2: Etudes & Développement</h6>
             </div>
             <div class="owl-carousel testimonial-carousel wow fadeInUp" data-wow-delay="0.1s">
                 <div class="testimonial-item bg-light rounded p-4">
@@ -226,7 +226,7 @@
     <div class="container-xxl py-5">
         <div class="container">
             <div class="text-center mx-auto mb-5 wow fadeInUp" data-wow-delay="0.1s" style="max-width: 600px;">
-                <h3 class="display-6 mb-4">Axe3: Apprentissage</h3>
+                <h6 class="display-6 mb-4" style="font-size : 35px">Axe3: Apprentissage</h6>
             </div>
             <div class="owl-carousel testimonial-carousel wow fadeInUp" data-wow-delay="0.1s">
                 <div class="testimonial-item bg-light rounded p-4">
