--- a/contact.html
+++ b/contact.html
@@ -98,10 +98,7 @@
         </div>
     </nav>
     <!-- Navbar End -->
-<div class="visme_d" data-title="Contact Us Contact Form" data-url="w468vn0k-contact-us-contact-form" data-domain="forms" data-full-page="false" data-min-height="500px" data-form-id="61339"></div><script src="https://static-bundles.visme.co/forms/vismeforms-embed.js"></script><!-- Back to Top -->
-    <a href="#" class="btn btn-lg btn-primary btn-lg-square rounded-circle back-to-top"><i class="bi bi-arrow-up"></i></a>
-
-    <!-- JavaScript Libraries -->
+<div class="visme_d" data-title="Contact Us Contact Form" data-url="w468vn0k-contact-us-contact-form" data-domain="forms" data-full-page="false" data-min-height="500px" data-form-id="61339"></div><script src="https://static-bundles.visme.co/forms/vismeforms-embed.js"></script>    <!-- JavaScript Libraries -->
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js"></script>
     <script src="lib/wow/wow.min.js"></script>
