--- a/ecosysteme.html
+++ b/ecosysteme.html
@@ -147,7 +147,7 @@
                 </div>
                 <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.3s">
                     <div class="team-item text-center p-4">
-                        <img class="img-fluid border rounded-circle w-75 p-2 mb-4" src="img/stt.png" alt="">
+                        <img class="img-fluid border rounded-circle w-75 p-2 mb-4" src="img/stt.jpg" alt="">
                         <div class="team-text">
                             <div class="team-title">
                                 <h5>STT</h5>
