--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
                                 </button>
 
                                 <button class="nav-link">
-                                    <a href="testimonial.html"><h5>Evenmentiel</h5></a>
+                                    <a href="testimonial.html"><h5>Evénementiel</h5></a> 
                                 </button>
                             </div>
                            </nav>
