--- a/testimonial.html
+++ b/testimonial.html
@@ -120,11 +120,12 @@
                     <div class="h-100">
                         <h6 class="section-title bg-white text-start text-primary pe-3">Une première en Afrique !</h6>
                         <h1 class="display-6 mb-4"> SIG + IA</h1>
-                        <p>En partenariat étroite avec <span class="text-primary">TopGéo</span> (représentant du leader mondial des SIG SuperMap en Tunisie);
-<span class="text-primary">l’ESAT</span> (Ecole Supérieure de l’Aéronautique et des Technologies) CEF organisera au sein du campus
-de l’ESAT une journée restreinte de sensibilisation - le 9 Mai 2024 - portant sur la convergence
-symbiotique entre Systèmes d’Information Géographique et Intelligence Artificielle (GEO-AI)</p>
-                        <a class="btn btn-primary rounded-pill py-3 px-5" href="">A suivre</a>
+                        <p>En partenariat tripartite entre <span class="text-primary"> l'ESAT </span> 
+                           (Ecole de l'Aéronautique et des Technologies), <span class="text-primary">TopGéo</span> 
+                           (représentant du leader mondial des SIG SuperMap en Tunisie) et <span class="text-primary">CEF</span> 
+                           (Cabinet d'Etudes & Formation) une journée restreinte de sensiblisation portant sur la convergence 
+                           symbiotique entre Systèmes d'Information Géographique et Intelligence Artificielle est prévue le 9-Mai-2024
+                           au sein du campus universitaire de l'ESAT. 
                     </div>
                 </div>
             </div>
