--- a/testimonial.html
+++ b/testimonial.html
@@ -125,7 +125,11 @@
                            (représentant du leader mondial des SIG SuperMap en Tunisie) et <span class="text-primary">CEF</span> 
                            (Cabinet d'Etudes & Formation) une journée restreinte de sensiblisation portant sur la convergence 
                            symbiotique entre Systèmes d'Information Géographique et Intelligence Artificielle est prévue le 9-Mai-2024
-                           au sein du campus universitaire de l'ESAT. 
+                           au sein du campus universitaire de l'ESAT.</p>
+                          <h6 style="font-weight: bold;">Avis de report :</h6>
+                        <p>La journée de sensibilisation du 9 Mai courant est reportée pour une date ultérieure, 
+                           nous vous tiendrons au courant dés que nous aurons la date exacte.<br> 
+                           Nous comptons sur votre parfaite compréhension ! </p>
                     </div>
                 </div>
             </div>
