--- a/testimonial.html
+++ b/testimonial.html
@@ -130,6 +130,7 @@
                         <p>La journée de sensibilisation du 9 Mai courant est reportée pour une date ultérieure, 
                            nous vous tiendrons au courant dés que nous aurons la date exacte.<br> 
                            Nous comptons sur votre parfaite compréhension ! </p>
+                       <img class="img-fluid" src="img/affiche.jpeg" alt="">
                     </div>
                 </div>
             </div>
