--- a/ADN.html
+++ b/ADN.html
@@ -193,7 +193,7 @@
                     <p class="mb-0">Conseil en Géo-marketing</p>
                 </div>
                 <div class="testimonial-item bg-light rounded p-4">
-                    <p class="mb-0">Conseil en matière de développement de projets innovants IA (Cloud / IA / SIG …)</p>
+                    <p class="mb-0">Conseil en matière de développement de projets innovants (Cloud / IA / SIG …)</p>
                 </div>
             </div>
         </div>
