--- a/testimonial.html
+++ b/testimonial.html
@@ -12,6 +12,9 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;500;600;700&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&display=swap" rel="stylesheet">
 
     <!-- Icon Font Stylesheet -->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.0/css/all.min.css" rel="stylesheet">
@@ -113,12 +116,59 @@
             <div class="row g-5">
                 <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.1s">
                     <div class="img-border">
-                        <img class="img-fluid" src="img/carousel-3.jpg" alt="">
+                        
+<style type="text/css">
+  
+.flexslider .slides img {
+  height: 400px !important;
+  -moz-user-select: none;
+}
+.flexslider .slides img {
+  width: 100% !important;
+  display: block;
+}  
+
+.flex-direction-nav a {
+  top: 25% !important;
+}
+
+</style>
+
+
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/linuxguist/flexslider@main/css/flexslider.css" type="text/css" media="screen" />
+
+    <!-- Modernizr -->
+  <script src="https://cdn.jsdelivr.net/gh/linuxguist/flexslider@main/js/modernizr.js"></script>
+
+
+<div class="fusion-slider-sc">
+    <div class="flexslider flexslider-hover-type-none" data-slideshow_autoplay="1" data-slideshow_smooth_height="0" data-slideshow_speed="7000" style="max-width:100%;height:100%;"><ul class="slides"><li class="image" style="width: 100%; float: left; margin-right: -100%; position: relative; opacity: 0; display: block; z-index: 1;" data-thumb-alt=""><span class="fusion-image-hover-element hover-type-none"><img decoding="async" src="https://i.imgur.com/zHY1E6B.png" alt="Image Not Found" class="wp-image-14313" srcset="" sizes="(max-width: 1024px) 100vw, (max-width: 640px) 100vw, 1200px" draggable="false" width="1366" height="723"></span></li><li class="image flex-active-slide" style="width: 100%; float: left; margin-right: -100%; position: relative; opacity: 1; display: block; z-index: 2;" data-thumb-alt=""><span class="fusion-image-hover-element hover-type-none"><img decoding="async" src="https://i.imgur.com/ZHyQ047.png" alt="Image Not Found" class="wp-image-14314" srcset="" sizes="(max-width: 1024px) 100vw, (max-width: 640px) 100vw, 1200px" draggable="false" width="1366" height="723"></span></li><li class="image" style="width: 100%; float: left; margin-right: -100%; position: relative; opacity: 0; display: block; z-index: 1;" data-thumb-alt=""><span class="fusion-image-hover-element hover-type-none"><img decoding="async" src="https://i.imgur.com/2NCWOQi.jpg" alt="Image Not Found" class="wp-image-14315" srcset="" sizes="(max-width: 1024px) 100vw, (max-width: 640px) 100vw, 1200px" draggable="false" width="1366" height="723"></span></li></ul><ol class="flex-control-nav flex-control-paging"><li><a href="#" class="">1</a></li><li><a href="#" class="flex-active">2</a></li><li><a href="#" class="">3</a></li></ol></div></div>
+
+
+
                     </div>
+                </div>
+                <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.5s">
+                    <h1>Une première en Tunisie et sur le continent</h1> 
+
+<p> A l’occasion de la saison estivale, CEF, organise un Pack Webinaires de
+sensibilisation//apprentissage portant sur les thématiques inédites &amp; brûlantes suivantes :
+</p>
+<ul>
+    <li>Tchat GPT au service de l’Export</li>
+    <li>La cybersécurité appliquée au domaine maritime et portuaire</li>
+    <li>IA en milieu maritime &amp; portuaire</li>
+    <li>IA dans le secteur de la finance</li>
+    <li>La Géomatique Augmentée : émergence d’un nouveau concept !</li>
+</ul>
+
+<span style="color:royalblue; font-family: Oswald; font-size: 20px; "> Nb : Les programmes, les calendriers ainsi que les modalités d’inscription vous seront communiqués sur
+
+demande via notre adresse mail : </span><a href="belhedi.inov@gmail.com">belhedi.inov@gmail.com</a> 
+                </div>
                 </div>
             </div>
         </div>
-    </div>
 
       
 
