--- a/publications.html
+++ b/publications.html
@@ -144,6 +144,24 @@
                     <p>Les Sig et la cartographie à l'ère du géoweb</p>
                     <a href="https://www.cairn.info/revue-espace-geographique-2011-2-page-142.htm"><span class="text-primary">Voir Article</span></a>
                 </div>
+                <div class="project-item border rounded h-100 p-4" data-dot="04">
+                    <div class="position-relative mb-4">
+                        <img class="img-fluid rounded" src="img/geo.webp" alt="">
+                        <a href="img/geo.webp" data-lightbox="project"><i class="fa fa-eye fa-2x"></i></a>
+                    </div>
+                    <h6>Article 4</h6>
+                    <p>L'émergence d'une Géomatique Augmentée (Géo-AI) ?</p>
+                    <a href="https://fr.slideshare.net/slideshow/la-l-emergence-d-une-geomatique-augmentee-geo-ai/268401229"><span class="text-primary">Voir Article</span></a>
+                </div>
+                <div class="project-item border rounded h-100 p-4" data-dot="05">
+                    <div class="position-relative mb-4">
+                        <img class="img-fluid rounded" src="img/metaverse.jpg" alt="">
+                        <a href="img/metaverse.jpg" data-lightbox="project"><i class="fa fa-eye fa-2x"></i></a>
+                    </div>
+                    <h6>Article 5</h6>
+                    <p>Les Metaverses d'apprentissage: Du fantasme au changement de paradigme !</p>
+                    <a href="https://www.espacemanager.com/les-metaverses-dapprentissage-du-fantasme-au-changement-de-paradigme.html"><span class="text-primary">Voir Article</span></a>
+                </div>
                 
             </div>
         </div>
