--- a/testimonial.html
+++ b/testimonial.html
@@ -112,6 +112,11 @@
 
     <!-- About Start -->
     <div class="container-xxl py-5">
+        <img src="img/affiche.jpeg" width="800px" height="500px">
+    </div>
+    
+
+    <div class="container-xxl py-5">
         <div class="container">
             <div class="row g-5">
                 <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.1s">
@@ -141,8 +146,7 @@
   <script src="https://cdn.jsdelivr.net/gh/linuxguist/flexslider@main/js/modernizr.js"></script>
 
 
-<div class="fusion-slider-sc">
-    <div class="flexslider flexslider-hover-type-none" data-slideshow_autoplay="1" data-slideshow_smooth_height="0" data-slideshow_speed="7000" style="max-width:100%;height:100%;"><ul class="slides"><li class="image" style="width: 100%; float: left; margin-right: -100%; position: relative; opacity: 0; display: block; z-index: 1;" data-thumb-alt=""><span class="fusion-image-hover-element hover-type-none"><img decoding="async" src="https://i.imgur.com/zHY1E6B.png" alt="Image Not Found" class="wp-image-14313" srcset="" sizes="(max-width: 1024px) 100vw, (max-width: 640px) 100vw, 1200px" draggable="false" width="1366" height="723"></span></li><li class="image flex-active-slide" style="width: 100%; float: left; margin-right: -100%; position: relative; opacity: 1; display: block; z-index: 2;" data-thumb-alt=""><span class="fusion-image-hover-element hover-type-none"><img decoding="async" src="https://i.imgur.com/ZHyQ047.png" alt="Image Not Found" class="wp-image-14314" srcset="" sizes="(max-width: 1024px) 100vw, (max-width: 640px) 100vw, 1200px" draggable="false" width="1366" height="723"></span></li><li class="image" style="width: 100%; float: left; margin-right: -100%; position: relative; opacity: 0; display: block; z-index: 1;" data-thumb-alt=""><span class="fusion-image-hover-element hover-type-none"><img decoding="async" src="https://i.imgur.com/2NCWOQi.jpg" alt="Image Not Found" class="wp-image-14315" srcset="" sizes="(max-width: 1024px) 100vw, (max-width: 640px) 100vw, 1200px" draggable="false" width="1366" height="723"></span></li></ul><ol class="flex-control-nav flex-control-paging"><li><a href="#" class="">1</a></li><li><a href="#" class="flex-active">2</a></li><li><a href="#" class="">3</a></li></ol></div></div>
+                    <img src="https://i.imgur.com/ZHyQ047.png">
 
 
 
@@ -151,7 +155,7 @@
                 <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.5s">
                     <h1>Une première en Tunisie et sur le continent</h1> 
 
-<p> A l’occasion de la saison estivale, CEF, organise un Pack Webinaires de
+<p> A partir du mois de septembre prochain , CEF, organise un Pack Webinaires de
 sensibilisation//apprentissage portant sur les thématiques inédites &amp; brûlantes suivantes :
 </p>
 <ul>
