--- a/index.html
+++ b/index.html
@@ -114,25 +114,24 @@
                     <img class="img-fluid" src="img/carousel-2.jpg" alt="Image">
                 </button>
                 <button type="button" data-bs-target="#header-carousel" data-bs-slide-to="1" aria-label="Slide 3">
-                    <img class="img-fluid" src="img/carousel-3.jpg" alt="Image">
+                    <img class="img-fluid" src="https://i.imgur.com/ZHyQ047.png" alt="Image">
                 </button>
             </div>
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img class="w-100" src="img/carousel-2.jpg" alt="Image">
+                    <img class="w-100" src="img/carousel-2.jpg" alt="Image" height="600px">
                     <div class="carousel-caption">
                         <div class="p-3" style="max-width: 900px;">
                             <h4 class="text-white text-uppercase mb-4 animated zoomIn">We Are Leader In</h4>
-                            <h1 class="display-1 text-white mb-0 animated zoomIn">Creative & Innovative Digital Solution</h1>
+                            <h4 class="display-1 text-white mb-0 animated zoomIn" style="font-size: 60px;">Creative & Innovative Digital Solution</h4>
                         </div>
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <img class="w-100" src="img/carousel-3.jpg" alt="Image">
+                    <img class="w-100" src="https://i.imgur.com/ZHyQ047.png" alt="Image" height="400px">
                     <div class="carousel-caption">
                         <div class="p-3" style="max-width: 900px;">
-                            <h4 class="text-white text-uppercase mb-4 animated zoomIn">We Are Leader In</h4>
-                            <h1 class="display-1 text-white mb-0 animated zoomIn">Creative & Innovative Digital Solution</h1>
+                            <h4 class="text-white text-uppercase mb-4 animated zoomIn">Une première en Tunisie et sur le continent</h4>
                         </div>
                     </div>
                 </div>
@@ -168,7 +167,7 @@
                                 </button>
 
                                 <button class="nav-link">
-                                    <a href="testimonial.html"><h5>Evénementiel</h5></a> 
+                                    <a href="testimonial.html"><h5>Evénementiel</h5></a>
                                 </button>
                             </div>
                            </nav>
